--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Andri Freyr - Front page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,13 +28,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pallas_athena_merki_hi.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Andri Freyr Eyjólfsson</strong>.</h1>
+								<h1><strong>Andri Freyr Eyjólfsson</strong>.</h1>
 							</header>
-							<p>And this is my website for verkefni 1 in: <strong>Tölvustudd Framleiðsla, VÉL608.<strong>
+							<p>Website about me and my projects for:<strong> Tölvustudd Framleiðsla, VÉL608.<strong>
 							<a href="#work" class="button scrolly">Learn about me</a>
 						</div>
 					</div>
@@ -46,33 +46,26 @@
 				<div class="container">
 					<header>
 						<h2>Information about me</h2>
-						<p>Work, personal and Resume</p>
+						<p>Personal information and Resume</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-briefcase"></span>
-								<h3>Career</h3>
-								<p>Work and study</p>
+								<span class="icon solid featured fa-home"></span>
+								<h3><a href="AboutMe.html">About me</a></h3>
+								<p>Personal life</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-child"></span>
-								<h3>Personal life</h3>
-								<p>Interests and goals</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
+							<section href="AndriResume.pdf" class="box style1">
 								<span class="icon solid featured fa-address-card"></span>
-								<h3>Resume</h3>
+								<h3><a href="AndriResume.pdf">Resume</a></h3>
 								<p>My Resume, 27/01/2025.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Want to learn more about this project?</p>
+						<p>Want to learn more about my projects?</p>
 						<a href="#portfolio" class="button scrolly">Learn about this class</a>
 					</footer>
 				</div>
@@ -83,14 +76,14 @@
 				<div class="container">
 					<header>
 						<h2>Information about VÉL608. </h2>
-						<p>Class Projects, what i want out of this class, and an idea for a final project. </p>
+						<p>All my projects for Tölvustudd Framleiðsla, VÉL608 </p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Project 1</a></h3>
-								<p>Making a portfolio and all its steps</p>
+							<article class="box style1">
+								<a href="Project1.html" class="image featured"><img src="images/result_GitHub-logo.png" alt="" /></a>
+								<h3><a href="Project1.html">Project 1</a></h3>
+								<p>Website for my portfolio using Github</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -110,17 +103,11 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">What i want from this class </a></h3>
-								<p>What i hope to learn from VÉL608. </p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								<h3><a href="#">Final project</a></h3>
-								<p>Rough first idea of a potential final project for this class.</p>
+								<p>-Placeholder-</p>
 							</article>
 						</div>
+
 					</div>
 					<footer>
 						<p>Need more information?</p>
