--- a/AboutMe.html
+++ b/AboutMe.html
@@ -9,7 +9,7 @@
 				<ul class="container">
 					<li><a href="index.html">Home page</a></li>
 					<li><a href="Project1.html">Project 1</a></li>
-					<li><a href="Resume.html">Resume</a></li>
+					<li><a href="AndriResume.pdf">Resume</a></li>
 				</ul>
 			</nav>
     
