--- a/Project1.html
+++ b/Project1.html
@@ -21,7 +21,7 @@
     </head>
 		<link rel="stylesheet" href="assets/css/main.css" />
             <article class="box style2">
-				<a class="image featured"><img src="images/github-cover.jpg" alt="" /></a>
+				<a class="image-fit"><img src="images/github-cover.jpg" alt="" /></a>
                 <header>
                  <h1><strong>Project 1: Website</strong></h1>
                     <p><strong>The making of the website, using Github.</strong></p>   
@@ -31,16 +31,16 @@
                 <header>
                  <h2><strong>Step 1</strong></h2>
                     <p><strong>Downloading software:</strong></p>
-                    <p>First thing to do was to download the relevent software for making and hosting a website on Github. I started my downloading Brackets from their website, as instructed in the video given to us by the teacher:  </p>
+                    <p>First thing to do was to download the relevant software for making and hosting a website on Github. I started off by downloading <a href="http://brackets.io/">"Brackets"</a> from their website, as instructed in the <a href="https://youtube.com/playlist?list=PLGuNTpc293hpIpAVSJ3-SgNolCTa1BfJE">video</a> given to us by the teacher:  </p>
                 </header>                
-                    <a class="image"><img src="images/Brackets_download.jpg" alt="" /></a>
+                    <a class="image-fit"><img src="images/Brackets_download.jpg" alt="" /></a>
                 <header>
                 </header>
                 <header>
-                <p>Next thing to download before starting was Git, by clicking "download for windows" on their website and then finding the correct version for my setup, which for my case ended up to be the 64-bit one.
+                <p>Next thing to download before starting was <a href="https://git-scm.com/">"Git"</a>, by clicking "download for windows" on their website and then finding the correct version for my setup, which for my case ended up to be the 64-bit one.
                 </header>
                 <header>
-                <p>Then the last thing to download was a free template for my website from: https://html5up.net/. I ended up choosing the "Miniport template" as I thought it was the one most like other portfolio examples found from google.
+                <p>Then the last thing to download was a free template for my website from:<a href="https://html5up.net/">https://html5up.net/</a> . I ended up choosing the <a href="https://html5up.net/miniport">"Miniport template"</a> as I thought it was the one most like other portfolio examples found from google.
                 </header>
             </article>
     
@@ -51,11 +51,11 @@
                     <p><strong>Editing template:</strong></p>
                     <p>To edit the template I first had to import the Index file from it to the Brackets workspace. I did that simply by dragging it as seen on the image: </p>
                 </header>                
-                    <a class="image"><img src="images/Index_to_brackets.jpg" alt="" /></a>
+                    <a class="image-fit"><img src="images/Index_to_brackets.jpg" alt="" /></a>
                 <header>
                 </header>
                 <header>
-<p>and the first and easiest changes i made to the template was to replace all name and most text to a more relevent one, for example my name instead of "John doe". I then found images for my project by screenshotting varius parts of the working process, or taking them from google. Switching from template images to mine was simply a matter of putting them in the "images" folder and changing the "src=" text in the html. to the name of the relevant images. 
+<p>and the first and easiest changes i made to the template was to replace all name and most text to a more relevant one, for example my name instead of "John doe". I then found images for my project by screenshotting various parts of the working process, or taking them from google. Switching from template images to mine was simply a matter of putting them in the "images" folder and changing the "src=" text in the html. to the name of the relevant images. 
                 </header>
                     <a class="image"><img src="images/Breitamynd.jpg" alt="" /></a>
                 <header>
@@ -77,11 +77,11 @@
                 <header>
                 </header>
                 <header>
-Finally i went to the pages window located in the settings tab, and made sure to have selected "main" and "roots".
+Heres what its looks like to write the final code in:
                 </header>
                 <header>                
-                    <a class="image"><img src="images/Upload.png" alt="" /></a>
+                    <a class="image"><img src="images/FinalCommand.png" alt="" /></a>
                 </header>
                     <header>
-                        and then uplaoded the site by pressing "Save"
+                        and now the website is online!
                 </header>
