--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
 			<article id="top" class="wrapper style1">
 				<div class="container">
 					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
+						<div class="col-12-large col-12-large col-12-medium">
 							<span class="image fit"><img src="images/pallas_athena_merki_hi.jpg" alt="" /></span>
 						</div>
+                        
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1><strong>Andri Freyr Eyjólfsson</strong>.</h1>
 							</header>
-							<p>Website about me and my projects for:<strong> Tölvustudd Framleiðsla, VÉL608.<strong>
+                            <p>Website about me and my projects for:</p> 
+                            <p><strong>Tölvustudd Framleiðsla, VÉL608.</strong> <p>
 							<a href="#work" class="button scrolly">Learn about me</a>
 						</div>
 					</div>
@@ -88,9 +90,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Project 2</a></h3>
-								<p>-placeholder-</p>
+								<a href="Project2.html" class="image featured"><img src="images/StandurFusion1.png" alt="" /></a>
+								<h3><a href="Project2.html">Project 2</a></h3>
+								<p>Vinyl cutter and Pressfit model</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
