--- a/Project2.html
+++ b/Project2.html
@@ -10,7 +10,7 @@
 					<li><a href="index.html">Home page</a></li>
 					<li><a href="#sticker">Vinyl cutter</a></li>
 					<li><a href="#pressfit">Pressfit model</a></li>
-					<li><a href="#placeholder">Next Project</a></li>
+					<li><a href="Project3.html">Next Project</a></li>
 				</ul>
 			</nav>
     
