--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Project 3</a></h3>
-								<p>-placeholder-</p>
+								<a href="Project3.html" class="image featured"><img src="images/Pe%C3%B0.png" alt="" /></a>
+								<h3><a href="Project3.html">Project 3</a></h3>
+								<p>3D print and scan</p>
+                                
+                                
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
