--- a/Project1.html
+++ b/Project1.html
@@ -8,7 +8,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="index.html">Home page</a></li>
-					<li><a href="#work">Next project</a></li>
+					<li><a href="Project2.html">Next project</a></li>
 					<li><a href="AboutMe.html">About me</a></li>
 					<li><a href="AndriResume.pdf">Resume</a></li>
 				</ul>
