--- a/Project3.html
+++ b/Project3.html
@@ -28,21 +28,21 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style1">
-								<a href="#Print" class="image featured"><img src="images/Pe%C3%B0Tilbuin.jpg" alt="" /></a>
+								<a href="#print" class="image featured"><img src="images/Pe%C3%B0Tilbuin.jpg" alt="" /></a>
 								<h3><a href="#Print">3D Printing</a></h3>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style3">
-								<a href="#Scan" class="image fit"><img src="images/Pe%C3%B0tilbuin.png" alt="" /></a>
-								<h3><a href="#">3D Scanning</a></h3>
+								<a href="#Scan" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<h3><a href="#Scan">3D Scanning</a></h3>
 							</article>
 						</div>
 					</div>
                 </div>
     </article>
     
-            <article id="sticker" class="wrapper style2">
+            <article id="print" class="wrapper style2">
                 <header>
                  <h2><strong>3D Printing</strong></h2>
                     <p><strong>Step 1:</strong></p>
