--- a/Project3.html
+++ b/Project3.html
@@ -28,7 +28,7 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style1">
-								<a href="#print" class="image featured"><img src="images/Pe%C3%B0Tilbuin.jpg" alt="" /></a>
+								<a href="#Print" class="image featured"><img src="images/Pe%C3%B0Tilbuin.jpg" alt="" /></a>
 								<h3><a href="#Print">3D Printing</a></h3>
 							</article>
 						</div>
