--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
 					<li><a href="#work">Portfolio</a></li>
-					<li><a href="#portfolio">This class</a></li>
+					<li><a href="#portfolio">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
