--- a/Project3.html
+++ b/Project3.html
@@ -42,7 +42,7 @@
                 </div>
     </article>
     
-            <article id="print" class="wrapper style2">
+            <article id="Print" class="wrapper style2">
                 <header>
                  <h2><strong>3D Printing</strong></h2>
                     <p><strong>Step 1:</strong></p>
