--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Final project</a></h3>
-								<p>-Placeholder-</p>
+								<a href="https://patrekur01.github.io/lokaverkefni/" class="image featured"><img src="images/Dnd.jpg" alt="" /></a>
+								<h3><a href="https://patrekur01.github.io/lokaverkefni/">Final project</a></h3>
+								<p>D&D Battle map</p>
 							</article>
 						</div>
 
